--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  
+  <!--
   <div id="box1" class="boxes"></div>
   <div id="box2" class="boxes"></div>
+-->
+
+<div class="rectangle">
+  <p>I’m a rectangle!</p>
+</div>
+<div class="rectangle">
+  <p>So am I!</p>
+</div>
+<div class="rectangle">
+  <p>Me three!</p>
+</div>
 
   <header>
     <ul>
@@ -22,7 +33,7 @@
   </header>
   
   <div class="welcome">
-    <h1>Welcome to our survey!</h1>
+    <h1><strong>Welcome</strong> to our survey!</h1>
     <p>We're looking forward to getting your answers so we can make sure our products and services are the best they can be!</p>
   </div>
 
@@ -110,6 +121,10 @@
       <h3>Agree</h3>
     </div>
   </div>
+
+  <footer>
+    <h3>Thanks for taking our survey!</h3>
+  </footer>
 
 </body>
 </html>
