--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <!--
   <div id="box1" class="boxes"></div>
-  <div id="box2" class="boxes"></div>
--->
+  
+  <div id="box3" class="parent">
+    <div id="box2" class="boxes"></div>
+  </div>
+  <!--
 
-<div class="rectangle">
-  <p>I’m a rectangle!</p>
-</div>
-<div class="rectangle">
-  <p>So am I!</p>
-</div>
-<div class="rectangle">
-  <p>Me three!</p>
-</div>
+  <div class="rectangle">
+    <p>I'm a rectangle!</p>
+  </div>
+  <div class="rectangle">
+    <p>So am I!</p>
+  </div>
+  <div class="rectangle">
+    <p>Me three!</p>
+  </div>
+-->
 
   <header>
     <ul>
